# fock

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/: circuit.py
src/fock/: circuit.py  ops-deprecated.py  ops.py
src/fock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_circuit.py  test_displacement_matrix.py  test_ops-deprecated.py  test_ops.py
tests/strawberryfields/: circuit.py
tests/strawberryfields-deprecated/: ops.py
