[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fock"
version = "0.0.4"
authors = [
  { name="Xiang Zhao", email="magelead@outlook.com" },
]
description = "A continuous variable quantum neural network simulating framework written in PyTorch"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'numpy>=1.18.5',
  'torch>=1.11.0',
]

[project.urls]
"Homepage" = "https://github.com/magelead/fock"
"Bug Tracker" = "https://github.com/magelead/fock/issues"





