[metadata]
name = fock
version = 0.0.3
author = Xiang Zhao
author_email = magelead@outlook.com
description = A continuous variable quantum neural network simulating framework written in PyTorch. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magelead/fock
project_urls =
    Bug Tracker = https://github.com/magelead/fock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    numpy>=1.18.5 
    torch>=1.11.0

[options.packages.find]
where = src
